tools/crates/vendor/toml_edit/tests/fixtures/invalid/table/overwrite-array-in-parent.stderr
TOML parse error at line 4, column 1
  |
4 | arr = 2
  | ^
duplicate key `arr` in table `parent-table`
